contrast resolve

--- a/style.css
+++ b/style.css
@@ -797,7 +797,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #ef5000;
+    background: #D93F0A;
     color: #120404;
 }
 
